<resources>
    <string name="button_file">File</string>
    <string name="button_camera">Camera</string>
    <string name="button_location">Location</string>
    <string name="button_gallery">Gallery</string>
    <string name="button_open_gallery">Open Gallery</string>
    <string name="button_open_camera">Open Camera</string>
    <string name="button_choose_file">Choose File</string>
    <string name="button_user_location">User Location</string>
    <string name="button_download">Download</string>
    <string name="button_download_file_retrofit">Download File Retrofit</string>
    <string name="button_download_file_ktor">Download File Ktor</string>
    <string name="button_record_audio">Record Audio</string>
    <string name="button_stop_record">Stop</string>
    <string name="button_start_record">Start</string>
    <string name="button_pause_record">Pause</string>
    <string name="button_resume_record">Resume</string>
    <string name="button_notification">Notification</string>
    <string name="button_date_time">Date Time</string>
    <string name="button_current_date_time">Current Date Time</string>
    <string name="button_open_date_picker">Select Date</string>
    <string name="button_open_time_picker">Select Time</string>
    <string name="button_normal_notification">Normal Notification</string>
    <string name="button_custom_sound_notification">Custom Sound Notification</string>

    <string name="select_an_image">Select an image</string>
    <string name="take_a_picture">Take a Picture</string>
    <string name="file_name">File Name : %1$s</string>
    <string name="file_size">File Size : %1$s</string>
    <string name="is_recording">Is Recording : %1$s</string>
    <string name="play_record">Play Record : %1$s</string>
    <string name="current_date_time">Current Date Time : %1$s</string>
    <string name="selected_date">Selected Date : %1$s</string>
    <string name="selected_time">Selected Time : %1$s</string>

    <string name="rationale_read_storage_gallery">This app needs access to your storage to choose an image.</string>
    <string name="rationale_media_images">This app needs access to your media images to choose an image.</string>
    <string name="rationale_read_storage">This app needs access to your storage to choose a file.</string>
    <string name="rationale_write_storage">This app needs access to your storage to save a file</string>
    <string name="rationale_open_camera">This app needs access to your camera to take a photo.</string>
    <string name="rationale_fine_location">This app needs access to your precise location.</string>
    <string name="toast_permission_read_storage_denied">Permission Read Storage Denied</string>
    <string name="toast_permission_write_storage_denied">Permission Write Storage Denied</string>
    <string name="toast_permission_camera_denied">Permission Camera Denied</string>
    <string name="toast_permission_access_coarse_location_denied">Permission Precise Location Denied</string>
    <string name="toast_permission_images_denied">Permission Media Images Denied</string>
    <string name="toast_permission_record_audio_denied">Permission Record Audio Denied</string>
    <string name="toast_permission_record_audio_and_write_denied">Permission Record Audio or Write Storage Denied</string>
    <string name="toast_download_success">Download Success</string>
    <string name="toast_download_failed">Download Failed</string>
    <string name="toast_success_get_location">Success Get Location</string>
    <string name="toast_failed_get_location">Failed Get Location</string>
    <string name="toast_failed_get_image_camera">Failed Get Image from Camera</string>
    <string name="toast_failed_load_image_gallery">Failed Load Image from Gallery</string>
    <string name="toast_record_failed">Failed Record Audio</string>
    <string name="toast_play_record_failed">Failed Play Audio Record</string>
    <string name="toast_request_permission_failed">Request Permission Failed</string>
    <string name="toast_push_permission_denied">Permission Push Notification Denied</string>

    <string name="lorem_ipsum_short">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
</resources>