<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="record"
            type="com.yoesuv.filepicker.menu.record.viewmodels.RecordAudioViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvRecordingState"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="32dp"
                    android:textSize="14sp"
                    tools:text="@string/is_recording" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvRecordRunningTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="16dp"
                    android:textSize="28sp"
                    android:textStyle="bold"
                    tools:text="00:14" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonStartRecord"
                    style="@style/ButtonTheme"
                    android:layout_width="@dimen/button_width"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="16dp"
                    android:text="@string/button_start_record"
                    android:textSize="@dimen/button_text_size" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonStopRecord"
                    style="@style/ButtonTheme"
                    android:layout_width="@dimen/button_width"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="16dp"
                    android:text="@string/button_stop_record"
                    android:textSize="@dimen/button_text_size" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvRecordDuration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="16dp"
                    android:textSize="14sp"
                    android:visibility="@{record.showPlayer ? View.VISIBLE : View.GONE}"
                    tools:text="Play Record 03:58" />

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/imgBtnPlayRecord"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="8dp"
                    android:visibility="@{record.showPlayer ? View.VISIBLE : View.GONE}"
                    app:srcCompat="@drawable/ic_play" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</layout>
